fixed spacing issue for the grid when the description is over a certain word count

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -117,7 +117,7 @@
     height: 18px;
     margin: 0;
     margin-left: 10px;
-    margin-right: 15px;
+    margin-right: auto;
   }
 }
 
